finish centrifuge && casting basin improvements